# epub-summarize

./: README.md  main.py  pyproject.toml
esum/: __main__.py
