[project]
name = "summarize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.18",
    "google-ai-haystack>=3.0.0",
    "haystack-ai>=2.7.0",
    "trafilatura>=1.12.2",
]
scripts = { "summarize" = "main:main" }

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5"]
